<resources>
    <string name="app_name">Calculator</string>
    <string name="_zero">0</string>
    <string name="_equal">=</string>
    <string name="_one">1</string>
    <string name="_four">4</string>
    <string name="_seven">7</string>
    <string name="ac">AC</string>
    <string name="_two">2</string>
    <string name="_five">5</string>
    <string name="_eight">8</string>
    <string name="dot">.</string>
    <string name="_three">3</string>
    <string name="_six">6</string>
    <string name="_nine">9</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="delete">delete</string>
    <string name="start_typing">Start Typing...</string>
    <string name="_0_0">0</string>
</resources>